--- a/Day-57/templates/index.html
+++ b/Day-57/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <a href="{{ url_for('get_blog') }}">Go to Blog</a> <br />
+    <a href="{{ url_for('get_guess',name='Firaol') }}">To Guess</a>
 </body>
 <footer>
     <p>©️copyright {{ year }}. Built by Firaol</p>
