--- a/Day-59/templates/index.html
+++ b/Day-59/templates/index.html
@@ -29,8 +29,8 @@
                 </a>
                 <p class="post-meta">
                     Posted by
-                    <a href="#!">Start Bootstrap</a>
-                    on September 24, 2023
+                    <a href="#!">{{ author }}</a>
+                    on {{ date }}
                 </p>
             </div>
             <!-- Divider-->
