Removed the image

--- a/Day-59/templates/post.html
+++ b/Day-59/templates/post.html
@@ -5,7 +5,7 @@
 <!-- Navigation-->
 <!-- Page Header-->
 <header class="masthead"
-        style="background-image: url('{{url_for('static',filename='assets/img/post-sample-image.jpg')}}')">
+        style="background-image: url('assets/img/post-sample-image.jpg')">
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
