template inheritance using flask-bootstrap module to design the webpages

--- a/Day-61/templates/index.html
+++ b/Day-61/templates/index.html
@@ -1,9 +1,6 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-	<title>Secrets</title>
-</head>
-<body>
+{% extends 'bootstrap/base.html' %}
+{% block title%} Secrets {% endblock%}
+{% block content %}
 <div class="jumbotron">
 	<div class="container">
 		<h1>Welcome</h1>
@@ -11,5 +8,4 @@
 		<button class="btn btn-primary btn-lg"><a style="link-style:none" href="{{url_for('login')}}">Login</a></button>
 	</div>
 </div>
-</body>
-</html>
+{% endblock %}
