--- a/Day-61/templates/login.html
+++ b/Day-61/templates/login.html
@@ -1,27 +1,18 @@
-<!DOCTYPE HTML>
+{% extends 'bootstrap/base.html' %}
+{% import "bootstrap/wtf.html" as wtf %}
 
-<html>
-<head>
-    <title>Login</title>
-</head>
-<body>
+{% block title %} Login {% endblock %}
+{% block content %}
 <div class="container">
-    <h1>Login</h1>
-    <!-- This is where our form will go. -->
-    <form method="POST" action="{{ url_for('login') }}" novalidate>
-        {{ form.csrf_token }}
-        <p>{{ form.email.label }} <br> {{ form.email(size=30) }}
-            {% for err in form.email.errors: %}
-            <span style="color:red">{{ err }}</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.password.label }} <br> {{ form.password(size=30) }}
-            {% for err in form.password.errors: %}
-            <span style="color:red">{{ err }}</span>
-            {% endfor %}
-        </p>
-        {{form.submit}}
-    </form>
+    <div class="row">
+        <div class="col-sm-12 col-md-8">
+
+            <h1>Add a new cafe into the Database</h1>
+
+            {{ wtf.quick_form(form, novalidate = True) }}
+
+            <p class="space-above"><a href="{{ url_for('success') }}">see all cafes</a> </p>
+        </div>
+    </div>
 </div>
-</body>
-</html>
+{% endblock %}
