--- a/Day-62/templates/cafes.html
+++ b/Day-62/templates/cafes.html
@@ -1,5 +1,9 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="static/css/styles.css">
+{% endblock %}
 
 {% block title %}Restaurants{% endblock %}
 
