--- a/Day-62/templates/add.html
+++ b/Day-62/templates/add.html
@@ -1,6 +1,11 @@
 {% extends 'bootstrap/base.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+{% block styles %}
+{{ super() }}
+<link rel="stylesheet" href="static/css/styles.css">
+{% endblock %}
+
 {% block title %}Add A New Cafe{% endblock %}
 
 {% block content %}
