--- a/Day-62/templates/cafes.html
+++ b/Day-62/templates/cafes.html
@@ -32,7 +32,7 @@
                 {% for data in cafes:%}
                 <tr>
                     <td>{{ data[0] }}</td>
-                    <td>{{ data[1] }}</td>
+                    <td><a href="{{ data[1] }}">{{ data[1] }}</a></td>
                     <td>{{ data[2] }}</td>
                     <td>{{ data[3] }}</td>
                     <td>{{ data[4] }}</td>
@@ -46,7 +46,7 @@
 
             </table>
 
-            <p><a href="#">Return to index page</a></p>
+            <p><a href="/">Return to index page</a></p>
 
         </div>
     </div>
