--- a/Day-63/templates/add.html
+++ b/Day-63/templates/add.html
@@ -1,18 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Add Book</title>
-</head>
-<body>
-    <form action="" method="POST">
-        <label>Book Name</label>
-        <input type="text">
-        <label>Book Author</label>
-        <input type="text">
-        <label>Rating</label>
-        <input type="text">
-        <button type="submit">Add Book</button>
-    </form>
-</body>
-</html>
+{% extends 'bootstrap/base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
+
+{% block title %} Add Book {% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-8">
+
+            <h1>Add a new Book into the database</h1>
+
+            <!-- This is where your WTForm will go -->
+            {{ wtf.quick_form(form, novalidate=True) }}
+
+            <p class="space-above"><a href="#">See all Books</a></p>
+
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Add Book</title>-->
+<!--</head>-->
+<!--<body>-->
+
+
+<!--&lt;!&ndash;    <form action="" method="POST">&ndash;&gt;-->
+<!--&lt;!&ndash;        <label>Book Name</label>&ndash;&gt;-->
+<!--&lt;!&ndash;        <input type="text">&ndash;&gt;-->
+<!--&lt;!&ndash;        <label>Book Author</label>&ndash;&gt;-->
+<!--&lt;!&ndash;        <input type="text">&ndash;&gt;-->
+<!--&lt;!&ndash;        <label>Rating</label>&ndash;&gt;-->
+<!--&lt;!&ndash;        <input type="text">&ndash;&gt;-->
+<!--&lt;!&ndash;        <button type="submit">Add Book</button>&ndash;&gt;-->
+<!--&lt;!&ndash;    </form>&ndash;&gt;-->
+<!--</body>-->
+<!--</html>-->
