rendered all books on index page

--- a/Day-63/templates/index.html
+++ b/Day-63/templates/index.html
@@ -7,9 +7,11 @@
 <body>
 <h1>My Library</h1>
     <ul>
-        <li></li>
+        {% for book in books: %}
+        <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}</li>
+        {% endfor %}
     </ul>
     
-<a href="">Add New Book</a>
+<a href="{{ url_for('add') }}">Add New Book</a>
 </body>
 </html>
