--- a/Day-63/templates/index.html
+++ b/Day-63/templates/index.html
@@ -6,12 +6,15 @@
 </head>
 <body>
 <h1>My Library</h1>
-    <ul>
-        {% for book in books: %}
-        <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}</li>
-        {% endfor %}
-    </ul>
-    
+{% if books == []: %}
+<p>Library is Empty</p>
+{% endif %}
+<ul>
+    {% for book in books: %}
+    <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}</li>
+    {% endfor %}
+</ul>
+
 <a href="{{ url_for('add') }}">Add New Book</a>
 </body>
 </html>
