--- a/Day-63/templates/index.html
+++ b/Day-63/templates/index.html
@@ -1,20 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Library</title>
-</head>
-<body>
-<h1>My Library</h1>
-{% if books == []: %}
-<p>Library is Empty</p>
-{% endif %}
-<ul>
-    {% for book in books: %}
-    <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}</li>
-    {% endfor %}
-</ul>
+{% extends 'bootstrap/base.html' %}
+{% block title %} Book Library {% endblock %}
 
-<a href="{{ url_for('add') }}">Add New Book</a>
-</body>
+
+{% block content %}
+<div class="container">
+    <h1>My Library</h1>
+    {% if books == []: %}
+    <p>Library is Empty</p>
+    {% endif %}
+    <ul>
+        {% for book in books: %}
+        <li>{{ book.title }} - {{ book.author }} - {{ book.rating }}</li>
+        {% endfor %}
+    </ul>
+    <a href="{{ url_for('add') }}">Add New Book</a>
+</div>
+{% endblock %}
 </html>
