--- a/Day-63/templates/edit.html
+++ b/Day-63/templates/edit.html
@@ -5,9 +5,10 @@
 
 {% block content %}
 <div class="container">
-    <p>{{ book[0]["title"] }}</p>
-    <p>{{ book[0]["author"] }}</p>
-    <p>{{ book[0]["rating"] }}</p>
+    <h2>Title: {{book.title}}</h2>
+    <h3>Author: {{book.author}}</h3>
+    <h3>Current Rating: {{book.rating}}</h3>
+    <hr>
     {{wtf.quick_form(form, novalidate = True)}}
 </div>
 {% endblock %}
