--- a/Day-64/templates/index.html
+++ b/Day-64/templates/index.html
@@ -32,7 +32,7 @@
             {{ movie.description }}
         </p>
 
-        <a href="#" class="button">Update</a>
+        <a href="edit/{{movie.id}}" class="button">Update</a>
         <a href="#" class="button delete-button">Delete</a>
 
       </div>
