Added The Delete Functionality to cards

--- a/Day-64/templates/index.html
+++ b/Day-64/templates/index.html
@@ -33,7 +33,7 @@
         </p>
 
         <a href="edit/{{movie.id}}" class="button">Update</a>
-        <a href="#" class="button delete-button">Delete</a>
+        <a href="delete/{{movie.id}}" class="button delete-button">Delete</a>
 
       </div>
     </div>
