--- a/Day-64/templates/index.html
+++ b/Day-64/templates/index.html
@@ -41,7 +41,7 @@
     {% endfor %}
 </div>
 <div class="container text-center add">
-<a href="#" class="button">Add Movie</a>
+<a href="add" class="button">Add Movie</a>
 </div>
 
 {% endblock %}
