Used a TMDB API to retrive data for a movie

--- a/Day-64/templates/index.html
+++ b/Day-64/templates/index.html
@@ -18,7 +18,7 @@
     {% for movie in movies: %}
   <div class="card" >
     <div class="front" style="background-image: url('{{movie.img_url}}');">
-        <p class="large">1</p>
+        <p class="large">{{ movie.ranking }}</p>
     </div>
     <div class="back">
       <div>
