--- a/Day-64/templates/select.html
+++ b/Day-64/templates/select.html
@@ -13,9 +13,11 @@
 {% block content %}
 <div class="container">
     <h1 class="heading">Select Movie</h1>
+  {% for movie in data: %}
+  <img src="https://image.tmdb.org/t/p/w300_and_h450_bestv2/{{ movie['poster_path'] }}">
   <p>
-    <a href="#"> MOVIE TITLE - MOVIE RELEASE DATE</a>
+    <a href="edit/{{movie['id']}}"> {{movie["title"]}} - {{movie["release_date"]}}</a>
   </p>
-
+  {% endfor %}
 </div>
 {% endblock %}
