--- a/Day-64/templates/edit.html
+++ b/Day-64/templates/edit.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="content">
-  <h1 class="heading">Movie Title</h1>
+  <h1 class="heading">{{ name }}</h1>
     <p class="description">Edit Movie Rating</p>
   {{ wtf.quick_form(form, novalidate=True) }}
   </div>
