--- a/Day-68/templates/login.html
+++ b/Day-68/templates/login.html
@@ -1,9 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 
+
 <div class="box">
     <h1>Login</h1>
-
+    {% if error: %}
+    <p class="error"><strong>Error:</strong>{{ error }}</p>
+    {% endif %}
     <form action="{{ url_for('login') }}" method="post">
         <input type="text" name="email" placeholder="Email" required="required"/>
         <input type="password" name="password" placeholder="Password" required="required"/>
