--- a/Day-68/templates/login.html
+++ b/Day-68/templates/login.html
@@ -4,9 +4,13 @@
 
 <div class="box">
     <h1>Login</h1>
-    {% if error: %}
-    <p class="error"><strong>Error:</strong>{{ error }}</p>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {% for message in messages %}
+    <p>{{ message }}</p>
+    {% endfor %}
     {% endif %}
+    {% endwith %}
     <form action="{{ url_for('login') }}" method="post">
         <input type="text" name="email" placeholder="Email" required="required"/>
         <input type="password" name="password" placeholder="Password" required="required"/>
