Working on comment section

--- a/Day-69/templates/post.html
+++ b/Day-69/templates/post.html
@@ -36,6 +36,7 @@
                 <!--           Comments Area -->
                 <div class="col-lg-8 col-md-10 mx-auto comment">
                     {{ ckeditor.load() }}
+                    {{ ckeditor.config(name="Comment") }}
                     {{ wtf.quick_form(form, novalidate=True) }}
                     <ul class="commentList">
                         <li>
