--- a/Day-69/templates/post.html
+++ b/Day-69/templates/post.html
@@ -11,7 +11,7 @@
                     <h1>{{post.title}}</h1>
                     <h2 class="subheading">{{post.subtitle}}</h2>
                     <span class="meta">Posted by
-              <a href="#">{{post.author_id}}</a>
+              <a href="#">{{author.name}}</a>
               on {{post.date}}</span>
                 </div>
             </div>
