--- a/Day-69/templates/post.html
+++ b/Day-69/templates/post.html
@@ -37,7 +37,7 @@
                 <div class="col-lg-8 col-md-10 mx-auto comment">
                     {{ ckeditor.load() }}
                     {{ ckeditor.config(name="Comment") }}
-                    {{ wtf.quick_form(form, novalidate=True) }}
+                    {{ wtf.quick_form(form, novalidate=True, button_map={"submit":"primary"}) }}
                     <ul class="commentList">
                         <li>
                             <div class="commenterImage">
