Added a Gravatar to the blog post

--- a/Day-69/templates/post.html
+++ b/Day-69/templates/post.html
@@ -34,21 +34,23 @@
                 {% endif %}
 
                 <!--           Comments Area -->
+                {{ ckeditor.load() }}
+                {{ ckeditor.config(name="Comment") }}
+                {{ wtf.quick_form(form, novalidate=True, button_map={"submit":"primary"}) }}
                 <div class="col-lg-8 col-md-10 mx-auto comment">
-                    {{ ckeditor.load() }}
-                    {{ ckeditor.config(name="Comment") }}
-                    {{ wtf.quick_form(form, novalidate=True, button_map={"submit":"primary"}) }}
+                {% for comment in post.comments : %}
                     <ul class="commentList">
                         <li>
                             <div class="commenterImage">
-                                <img src="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk.jpg"/>
+                                <img src="{{ gravatar }}"/>
                             </div>
                             <div class="commentText">
-                                <p>Some comment</p>
-                                <span class="date sub-text">comment author name</span>
+                                <p>{{ comment.comment| safe}}</p>
+                                <span class="date sub-text">{{ comment.comment_author.name }}</span>
                             </div>
                         </li>
                     </ul>
+                {% endfor %}
                 </div>
 
 
